crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_long_choice_text.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---
 Select option:                                                                 

 > Short
   This is a much longer choice that might need to be truncated or wrapped
depending on the terminal width
   Medium length option here

 ↑/↓ navigate │ Enter select │ Esc cancel
