crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_long_question_text.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
assertion_line: 1231
expression: render_app(&app)
---
                                                                                
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 This is a very long question that should test how the modal handles text       
overflow. It contains multiple sentences to ensure we're testing a realistic    
scenario where the agent asks a detailed question that might wrap across        
multiple lines in the terminal.                                                 
 > Accept                                                                       
   Reject                                                                       
   Skip                                                                         
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ↑/↓ navigate │ Enter select │ Esc cancel
