crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_many_choices.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---
 Select an option:                                                              

 > First option
   Second option
   Third option
   Fourth option
   Fifth option
   Sixth option
   Seventh option
   Eighth option

 ↑/↓ navigate │ Enter select │ Esc cancel
