crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_multi_select_with_selection.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app(&app)
---
 Select frameworks:                                                             

   React
 > Vue
   Angular
   Svelte

 ↑/↓ navigate │ Enter select │ Esc cancel
