crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_unicode_content.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
assertion_line: 619
expression: render_app(&app)
---
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 Select your preferred emoji reaction:                                          
 > 👍 Thumbs up
   ❤️ Heart
   🎉 Party
   🚀 Rocket
   🤔 Thinking
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ↑/↓ navigate │ Enter select │ Esc cancel
